update gitignore and added nbformat

--- a/mod1/.cs50.yaml
+++ b/mod1/.cs50.yaml
@@ -2,6 +2,7 @@ check50:
   dependencies:
     - "jupyter"
     - "pandas"
+    - "nbformat"
   files:
     - !exclude "*"
     - !require "module 1.ipynb"
