--- a/mod1/.cs50.yaml
+++ b/mod1/.cs50.yaml
@@ -3,6 +3,7 @@ check50:
     - "jupyter>=1.0"
     - "pandas>=1.0"
     - "nbformat>=5"
+    - "matplotlib>3.2"
   files:
     - !exclude "*"
     - !require "module 1.ipynb"
