--- a/mod1/.cs50.yaml
+++ b/mod1/.cs50.yaml
@@ -4,6 +4,7 @@ check50:
     - "pandas>=1.0"
     - "nbformat>=5"
     - "matplotlib>=3.2"
+    - "scipy>=1.4"
   files:
     - !exclude "*"
     - !require "module 1.ipynb"
