--- a/mod3/.cs50.yaml
+++ b/mod3/.cs50.yaml
@@ -5,7 +5,8 @@ check50:
     - "nbformat>=5"
     - "matplotlib>=3.2"
     - "scipy>=1.4"
-    - "spacy>=2.2" 
+    - "spacy>=2.2"
+    - "scikit-learn>=0.22"
   files:
     - !exclude "*"
     - !require "module 3.ipynb"
