--- a/mod1/.cs50.yaml
+++ b/mod1/.cs50.yaml
@@ -1,6 +1,6 @@
 check50:
   dependencies:
-    - "nbconvert<=5.0"
+    - "nbconvert==6.0.7"
     - "jupyter>=1.0"
     - "pandas>=1.0"
     - "nbformat>=5"
