--- a/mod1/.cs50.yaml
+++ b/mod1/.cs50.yaml
@@ -1,7 +1,7 @@
 check50:
   dependencies:
     - "nbconvert==6.0.7"
-    - "jupyter>=1.0"
+    - "notebook>=6.3"
     - "pandas>=1.0"
     - "nbformat>=5"
     - "matplotlib>=3.2"
