mod2 & mod3 nb hacks

--- a/mod3/.cs50.yaml
+++ b/mod3/.cs50.yaml
@@ -8,6 +8,7 @@ check50:
     - "spacy>=2.2"
     - "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz"
     - "scikit-learn>=0.22"
+    - "nbconvert>=6.0"
   files:
     - !exclude "*"
     - !require "module 3.ipynb"
